# Aegis-eBPF

./: .gitignore  AEGIS_REVIEW.md  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  SECURITY_GAP.md  aegis.service  extract_events.py  fake_cs.py  install.sh  microbench.rs  run_firewall.sh  setup_isolation.sh  stress_test.py
.github/workflows/: ci.yml
aegis-cli/: Cargo.toml  build.rs  test_caps.rs  test_fd.rs
aegis-cli/src/: alerts.rs  api_ratelimit.rs  cef_export.rs  command_handler.rs  compat.rs  config.rs  conntrack_gc.rs  dashboard.rs  dpi.rs  event_loop.rs  fleet_client.rs  format.rs  geo.rs  hot_reload.rs  loader.rs  main.rs  map_manager.rs  metrics.rs  pcap.rs  privilege.rs  reputation.rs  stats_history.rs  tls_fingerprint.rs  yara_engine.rs
aegis-cli/src/feeds/: downloader.rs  loader.rs  mod.rs  parser.rs
aegis-cli/src/tui/: mod.rs
aegis-cni/: Cargo.toml
aegis-cni/src/: cni.rs  main.rs
aegis-common/: Cargo.toml
aegis-common/src/: lib.rs
aegis-ebpf/: Cargo.toml
aegis-ebpf/src/: headers.rs  main.rs  parsing.rs
aegis-tc/: Cargo.toml
aegis-tc/src/: headers.rs  main.rs  parsing.rs
aegis-tower/: Cargo.toml  build.rs
aegis-tower/src/: main.rs
deploy/: aegis@.service  config.yaml  deploy.sh
deploy/kubernetes/: cni-config.json  daemonset.yaml  rbac.yaml
guide/: 02_config_file.md
proto/: aegis.proto
scripts/: build-packages.sh
test/: distro-matrix.sh
xtask/: Cargo.toml
xtask/src/: main.rs
