[workspace]
members = [
    "aegis-cli",
    "aegis-common",
    "aegis-ebpf",
    "aegis-tc",
    "aegis-cni",
    "xtask",
]
exclude = [
    "aegis-cli/fuzz",
    "aegis-tower",  # Does not compile — tokio-stream sync feature missing
    "verification",
]
default-members = ["aegis-cli", "aegis-cni", "xtask"]
resolver = "2"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = false           # Disabled LTO to prevent OOM during linking
codegen-units = 16    # Cap codegen parallelization to prevent OOM
opt-level = 3         # Maximize runtime performance
strip = true          # Strip symbols to reduce binary size and memory mapping
debug = false         # Disable debug symbols for release
