[package]
name = "aegis-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
aya = { version = "0.13", features = ["async_tokio"] }
aya-log = "0.2"
aegis-common = { path = "../aegis-common", features = ["user"] }
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1.25", features = ["macros", "rt", "rt-multi-thread", "net", "signal", "io-util", "io-std", "time"] }
anyhow = "1.0"
env_logger = "0.10"
log = "0.4"
libc = "0.2"
bytes = "1.0"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
ratatui = "0.26"
crossterm = "0.27"
sysinfo = "0.30"
reqwest = { version = "0.11", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde_json = "1.0"
chrono = "0.4"
caps = "0.5"  # Linux capabilities for privilege drop
