[package]
name = "aegis-cli"
version = "1.0.0"
edition = "2021"
license = "MIT"
description = "Aegis eBPF XDP/TC firewall — userspace controller with TUI"
repository = "https://github.com/m4rba4s/Aegis-eBPF"

[dependencies]
aya = { version = "0.13", features = ["async_tokio"] }
aya-log = "0.2"
aegis-common = { path = "../aegis-common", features = ["user"] }
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1.25", features = ["macros", "rt", "rt-multi-thread", "net", "signal", "io-util", "io-std", "time"] }
anyhow = "1.0"
log = "0.4"
libc = "0.2"
bytes = "1.0"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
ratatui = "0.26"
crossterm = "0.27"
sysinfo = "0.30"
reqwest = { version = "0.11", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde_json = "1.0"
chrono = "0.4"
caps = "0.5"
object = "0.36"
const_format = "0.2"
clap_complete = "4.5"
toml = "0.8"
maxminddb = "0.23"

# Structured logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-log = "0.2"
tracing-appender = "0.2"
clap_mangen = "0.2"

[package.metadata.deb]
maintainer = "Aegis Security Team <security@aegis.dev>"
copyright = "2024 Aegis Project"
license-file = ["../LICENSE", "4"]
extended-description = "Aegis eBPF XDP/TC firewall userspace controller and daemon"
section = "net"
priority = "optional"
assets = [
    ["target/release/aegis-cli", "usr/local/bin/", "755"],
    ["../install.sh", "usr/local/share/aegis/install.sh", "755"],
]

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/aegis-cli", dest = "/usr/local/bin/aegis-cli", mode = "755" },
    { source = "../install.sh", dest = "/usr/local/share/aegis/install.sh", mode = "755" },
]
