[package]
name = "aegis-cni"
version = "1.0.0"
edition = "2021"
license = "MIT"
description = "Aegis eBPF Firewall — Kubernetes CNI plugin for per-pod XDP policy"

[[bin]]
name = "aegis-cni"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
