[package]
name = "aegis-tower"
version = "3.0.0"
edition = "2021"
description = "gRPC Fleet Controller for Aegis eBPF Firewall"
authors = ["m4rba4s <info@m4rba4s.com>"]

[dependencies]
tonic = "0.9.2"
prost = "0.11.9"
tokio = { version = "1.28.0", features = ["macros", "rt-multi-thread", "sync"] }
tokio-stream = { version = "0.1.14", features = ["sync"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
clap = { version = "4.2.7", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
tonic-build = "0.9.2"
